<resources>
    <string name="app_name">EncuestasV3.1</string>
    <string name="btnInicio">Iniciar Encuesta</string>
    <string name="salir">Salir</string>
    <string name="EncPendientes">Pendientes por Sinc</string>
    <string name="FotosPendientes">Fotos Pendientes por Sinc</string>
    <string name="limpiar">Limpiar</string>
    <string name="cambiarUser">Cambiar Usuario</string>
    <string name="tipoEncuestas">Seleccione un \nTipo de Encuesta</string>
    <string name="proyecto">Seleccione un Proyecto:</string>
    <string name="seleccione">Seleccione</string>
    <string name="siguiente">Siguiente</string>
    <string name="pregunta">¿Pregunta.?</string>
    <string name="respuesta">Respuesta</string>
    <string name="CambiarUsr">Cambiar de usuario</string>
    <string name="maximoFotos">Número de fotos maximo 5</string>
    <string name="tomarFoto">Tomar Foto</string>
    <string name="terminarEnc">¿Terminar la encuesta?</string>
    <string name="seleccioneTxt">Seleccione un Archivo</string>
    <string name="login">Login</string>
    <string name="Encuestas">Seleccione una Encuesta</string>
</resources>
