<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.popgroup.encuestasv3.MainEncuesta.MainActivity">

    <include layout="@layout/layout_loader"></include>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTelefono"
            style="@style/textTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Usuario : "
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtUsuario"
            style="@style/textTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="00000000"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/header"
        android:background="@color/colorBackgound" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/toolbar"
        android:layout_below="@+id/header"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/btnInicio"
            style="@style/mButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:drawableLeft="@drawable/ic_proyecto"
            android:paddingLeft="12dp"
            android:paddingRight="24dp"
            android:text="@string/btnInicio" />

        <Button
            android:id="@+id/btnCambiarUser"
            style="@style/mButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:drawableLeft="@drawable/ic_usuario"
            android:paddingLeft="12dp"
            android:paddingRight="24dp"
            android:text="@string/salir" />

        <Button
            android:id="@+id/btnEncPnedientes"
            style="@style/mButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:drawableLeft="@drawable/ic_encuesta"
            android:text="@string/EncPendientes"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnFotosPendientes"
            style="@style/mButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:drawableLeft="@drawable/ic_camara"
            android:text="@string/FotosPendientes"
            android:visibility="invisible" />


    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:visibility="gone"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/colorBackgroundTxt" />
    </android.support.v7.widget.Toolbar>
</RelativeLayout>
