<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackgound"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:elevation="4dp"
        android:background="@color/colorBackgoundHeader"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtPregunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            style="@style/textTittle"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="56dp"
        android:padding="24dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editRespLibre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/colorAccent"
            android:hint="@string/respuesta"
            android:inputType="text"
            android:visibility="invisible"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnOpc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:visibility="invisible"
            android:text="@string/seleccione" />

        <Spinner
            android:id="@+id/spnOpciones"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:background="@color/colorAccent"
            android:visibility="invisible"
            android:focusableInTouchMode="true" />

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/colorTextPrimary"
            android:background="@color/colorBackgoundHeader"
            android:text="@string/siguiente" />

        <TextView
            android:id="@+id/LblMensaje"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/colorTextPrimary"
            />
    </android.support.v7.widget.Toolbar>

</RelativeLayout>