<?xml version="1.0" encoding="utf-8"?>
   <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackgound"
    android:orientation="vertical">
<LinearLayout
    android:id="@+id/lnr_foto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_image"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_image"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_image"/>


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_image"/>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_image"/>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        style="@style/textNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/maximoFotos" />
</LinearLayout>

<View
android:id="@+id/view"
android:layout_width="match_parent"
android:layout_height="1dp"
android:layout_below="@id/lnr_foto"
android:background="@color/colorBackgoundHeader" />

<LinearLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center_horizontal"
android:orientation="vertical"
android:layout_below="@id/view">

<Button
    android:id="@+id/btnFoto"
    android:layout_width="220dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="56dp"
    style="@style/mButtonCuestionario"
    android:text="@string/tomarFoto"/>
<Button
    android:id="@+id/btnSiguiente"
    android:layout_width="220dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    style="@style/mButtonCuestionario"
    android:text="@string/siguiente"/>

</LinearLayout>

<android.support.v7.widget.Toolbar
android:id="@+id/toolbar"
android:layout_width="match_parent"
android:layout_height="56dp"
android:layout_alignParentBottom="true"
android:background="?attr/colorPrimary"
app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

<TextView
    android:id="@+id/txtTitle"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center"
    android:textColor="@color/colorTextPrimary"
    />
</android.support.v7.widget.Toolbar>
    </RelativeLayout>